[package]
name = "pixel_cloud_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bytemuck = "1.13.1"
image = "0.24.6"
palette = "0.7.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
